--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 		
 		.button {
 			transition: .3s;
-			width: 178px;
+			width: 180px;
 			color: black;
 		}
 
@@ -259,7 +259,6 @@
 		
 		.button a {
 			color: black;
-			height: 35px;
 		}
 		
 		.button a:hover {
@@ -379,7 +378,12 @@ Friday
 Registration open:<br>
 <strong>March 1 &ndash; March 31</strong> 
  
-	
+	<hr style="border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3); Margin-bottom: 0;">
+
+				
 					<table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
 						<tr>
 							<td style=" text-align: center;" class="button"> 
